fix reviews, add item, comments

--- a/BazarakFron/src/pages/login/LoginPage.css
+++ b/BazarakFron/src/pages/login/LoginPage.css
@@ -1,6 +1,6 @@
 .login-wrapper {
   min-height: 100vh;
-  background: #f3f4f6;
+  background: #E2FDFF;
   display: flex;
   justify-content: center;
   align-items: center;
